--- a/cloud-music/package.json
+++ b/cloud-music/package.json
@@ -41,6 +41,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "jquery": "^3.5.1",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
     "mini-css-extract-plugin": "0.11.3",
